spec/e2e/field/set_on_function.lit
fn foo {}

foo.bar = "value"; # error: [line 3] Only instances have fields.
